--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>lovehtml</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="iconfont/iconfont.css">
     <style>
         *{
@@ -17,10 +18,6 @@
     </style>
 </head>
 <body>
-    <div class="templatemo-logo visible-xs-block">
-        <div class="logo-left-container"><h1 class="logo-left">Black</h1></div>
-        <div class="logo-right-container"><h1 class="logo-right">White</h1></div>
-    </div>
     <div class="templatemo-container">
         <div class="left-container">
             <h1 class="logo-left">Black</h1>
