--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>lovehtml</title>
     <meta charset="UTF-8">
@@ -8,52 +9,89 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="iconfont/iconfont.css">
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        a{
-            text-decoration: none ;
+
+        a {
+            text-decoration: none;
         }
     </style>
 </head>
+
 <body>
     <div class="templatemo-container">
         <div class="left-container">
             <h1 class="logo-left">Black</h1>
             <div class="tp-left-inner-container">
                 <ul class="templatemo-nav">
-                    <li><a href="#" class="active"><i class="iconfont icon-gerenziliao"></i>个人资料</a></li>
-                    <li><a href="#"><i class="iconfont icon-zhuanyezhishijineng"></i>技能水平</a></li>
-                    <li><a href="#"><i class="iconfont icon-xiangmujingyan"></i>项目经验</a></li>
-                    <li><a href="#"><i class="iconfont icon-icon-project"></i>项目作品</a></li>
-                    <li><a href="#"><i class="iconfont icon-lianxiwomen"></i>联系我</a></li>
-                    <li><a href="#"><i class="iconfont icon-bokexinwen"></i>我的博客</a></li>
+                    <li>
+                        <a href="#" class="active">
+                            <i class="iconfont icon-gerenziliao"></i>个人资料</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="iconfont icon-zhuanyezhishijineng"></i>技能水平</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="iconfont icon-xiangmujingyan"></i>项目经验</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="iconfont icon-icon-project"></i>项目作品</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="iconfont icon-lianxiwomen"></i>联系我</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="iconfont icon-bokexinwen"></i>我的博客</a>
+                    </li>
                 </ul>
             </div>
-        </div> <!--left-area over-->
+        </div>
+        <!--left-area over-->
         <div class="right-container">
             <h1 class="logo-right">White</h1>
             <div class="tp-right-inner-container">
                 <h1 class="tp-header">我的-个人资料</h1>
                 <div class="tp-content-top">
                     <div class="tp-content-top-left">
-                        <h2 class="tp-content-top-name">马腾</h2>
-                        <ul class="tp-content-top-title">
-                            <li><i class="iconfont icon-ziyuan">姓名</i><span class="value">马腾</span></li>
-                            <li><i class="iconfont icon-dianhua">电话</i><span class="value">17390604287</span></li>
-                            <li><i class="iconfont icon-shengri">生日</i><span class="value">1998.01</span></li>
-                            <li><i class="iconfont icon-dizhi">地址</i><span class="value">黑龙江大学A2</span></li>
-                            <li><i class="iconfont icon-tubiao209">邮箱</i><span class="value">370627276@qq.com</span></li>
-                        </ul>
+                        <div class="tp-content-top-title">
+                            <ul>
+                                <li>
+                                    <i class="iconfont icon-ziyuan">姓名</i>
+                                    <span class="value">马腾</span>
+                                </li>
+                                <li>
+                                    <i class="iconfont icon-dianhua">电话</i>
+                                    <span class="value">17390604287</span>
+                                </li>
+                                <li>
+                                    <i class="iconfont icon-shengri">生日</i>
+                                    <span class="value">1998.01</span>
+                                </li>
+                                <li>
+                                    <i class="iconfont icon-dizhi">地址</i>
+                                    <span class="value">黑龙江大学A2</span>
+                                </li>
+                                <li>
+                                    <i class="iconfont icon-tubiao209">邮箱</i>
+                                    <span class="value">370627276@qq.com</span>
+                                </li>
+                            </ul>
+                            <div class="tp-content-top-img"></div>
+                        </div>
                         <p style="margin-bottom: 20px">
-                            黑龙江大学数据科学与技术学院网络工程专业2015级学生<br>
-                            有扎实的计算机基础，以及敏感的互联网思维，较强的学习能力，较好的管理能力，熟悉网络编程流程，对基本的办公事宜有所了解<br>
+                            黑龙江大学数据科学与技术学院网络工程专业2015级学生
+                            <br> 有扎实的计算机基础，以及敏感的互联网思维，较强的学习能力，较好的管理能力，熟悉网络编程流程，对基本的办公事宜有所了解
+                            <br>
                         </p>
                         <p style="margin-bottom: 20px">
-                            本人个性阳光，积极向上，有责任感，在担任班长的三年里与班里同学相处的非常好，
-                            有着优秀的管理能力，老师交给的任务也能完美及时完成。本人动手能力极强，善于拆卸
-                            安装各种型号的电脑 ，笔记本等，掌握各种系统的安装与操作。
+                            本人个性阳光，积极向上，有责任感，在担任班长的三年里与班里同学相处的非常好， 有着优秀的管理能力，老师交给的任务也能完美及时完成。本人动手能力极强，善于拆卸 安装各种型号的电脑 ，笔记本等，掌握各种系统的安装与操作。
                         </p>
                     </div>
                     <div class="tp-content-top-right">
@@ -64,20 +102,24 @@
                             <div class="top-info">
                                 <h3 class="top-info-name">马腾</h3>
                                 <p class="top-info-work">前端工程师</p>
-                                <p class="top-info-dizhi"><i class="iconfont icon-dizhi"></i>哈尔滨</p>
+                                <p class="top-info-dizhi">
+                                    <i class="iconfont icon-dizhi"></i>哈尔滨</p>
                             </div>
                             <div class="top-desc">
                                 <p>
-                                    1.掌握HTML/CSS能够编写语义化的HTML,模块化的CSS，能独立完成较复杂的布局 <br>
-                                    2.掌握原生JavaScript<br>
-                                    3.熟悉并使用Vue/JQuery<br>
-                                    4.熟悉响应式开发<br>
-                                    5.拥有团队合作项目经验<br>
+                                    1.掌握HTML/CSS能够编写语义化的HTML,模块化的CSS，能独立完成较复杂的布局
+                                    <br> 2.掌握原生JavaScript
+                                    <br> 3.熟悉并使用Vue/JQuery
+                                    <br> 4.熟悉响应式开发
+                                    <br> 5.拥有团队合作项目经验
+                                    <br>
                                 </p>
                             </div>
                             <div class="top-foot">
                                 <h6>©2018-2019 马腾 | lovehtml</h6>
-                                <a href="http://www.miitbeian.gov.cn/" target="_blank"><h6>黑ICP备18001844号</h6></a>
+                                <a href="http://www.miitbeian.gov.cn/" target="_blank">
+                                    <h6>黑ICP备18001844号</h6>
+                                </a>
                                 <h6 id="mytime"></h6>
                             </div>
                         </div>
@@ -87,4 +129,5 @@
         </div>
     </div>
 </body>
+
 </html>
