--- a/index.html
+++ b/index.html
@@ -98,33 +98,34 @@
                         <div class="top-img">
                             <div class="top-myimg"></div>
                         </div>
-                        <div class="top-mycontent">
-                            <div class="top-info">
-                                <h3 class="top-info-name">马腾</h3>
-                                <p class="top-info-work">前端工程师</p>
-                                <p class="top-info-dizhi">
-                                    <i class="iconfont icon-dizhi"></i>哈尔滨</p>
-                            </div>
-                            <div class="top-desc">
-                                <p>
-                                    1.掌握HTML/CSS能够编写语义化的HTML,模块化的CSS，能独立完成较复杂的布局
-                                    <br> 2.掌握原生JavaScript
-                                    <br> 3.熟悉并使用Vue/JQuery
-                                    <br> 4.熟悉响应式开发
-                                    <br> 5.拥有团队合作项目经验
-                                    <br>
-                                </p>
-                            </div>
-                            <div class="top-foot">
-                                <h6>©2018-2019 马腾 | lovehtml</h6>
-                                <a href="http://www.miitbeian.gov.cn/" target="_blank">
-                                    <h6>黑ICP备18001844号</h6>
-                                </a>
-                                <h6 id="mytime"></h6>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="mycontent">
+            <div class="top-info">
+                <h3 class="top-info-name">马腾</h3>
+                <p class="top-info-work">前端工程师</p>
+                <p class="top-info-dizhi">
+                    <i class="iconfont icon-dizhi"></i>哈尔滨</p>
+            </div>
+            <div class="top-desc">
+                <p>
+                    1.掌握HTML/CSS能够编写语义化的HTML,模块化的CSS，能独立完成较复杂的布局
+                    <br> 2.掌握原生JavaScript
+                    <br> 3.熟悉并使用Vue/JQuery
+                    <br> 4.熟悉响应式开发
+                    <br> 5.拥有团队合作项目经验
+                    <br>
+                </p>
+            </div>
+            <div class="top-foot">
+                <h6>©2018-2019 马腾 | lovehtml</h6>
+                <a href="http://www.miitbeian.gov.cn/" target="_blank">
+                    <h6>黑ICP备18001844号</h6>
+                </a>
+                <h6 id="mytime"></h6>
             </div>
         </div>
     </div>
