--- a/index.html
+++ b/index.html
@@ -1,134 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>lovehtml</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="iconfont/iconfont.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-
-        a {
-            text-decoration: none;
-        }
-    </style>
+    <title>Web-马腾</title>
 </head>
+<!-- titleimg -->
+<link rel="shortcut icon" href="img/favicon_jianli.ico" type="image/x-icon">
+<!-- bootstrap -->
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
+<!-- stylesheet -->
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="fonts/sns_fonts/iconfont.css">
+<link rel="stylesheet" href="css/home.css">
 
-<body>
-    <div class="templatemo-container">
-        <div class="left-container">
-            <h1 class="logo-left">Black</h1>
-            <div class="tp-left-inner-container">
-                <ul class="templatemo-nav">
-                    <li>
-                        <a href="#" class="active">
-                            <i class="iconfont icon-gerenziliao"></i>个人资料</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="iconfont icon-zhuanyezhishijineng"></i>技能水平</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="iconfont icon-xiangmujingyan"></i>项目经验</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="iconfont icon-icon-project"></i>项目作品</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="iconfont icon-lianxiwomen"></i>联系我</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="iconfont icon-bokexinwen"></i>我的博客</a>
-                    </li>
-                </ul>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<!-- nav -->
+<nav class="navbar navbar-item navbar-fixed-top " role="navigation">
+    <div class="container">
+        <!-- left-nav -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand page-scroll" href="#page-top">
+                <i class="fa fa-terminal"></i>前端工程师</a>
+        </div>
+        <!-- right-nav -->
+        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <ul class="nav navbar-nav">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#services">基本资料</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#works">项目经验</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#about">专业技能</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#project">工作经历</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#testimonials">自我评价</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#contact">联系方式</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- nav-end -->
+<!-- header -->
+<header class="intro">
+    <div class="intro-body">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>简历
+                        <span class=brand-heading>-前端工程师</span>
+                    </h1>
+                    <p class="intro-text">热爱技术，勇于挑战</p>
+                    <a href="#services" class="btn btn-circle page-scroll">
+                        <i class="fa fa-angle-double-down animated"></i>
+                    </a>
+                </div>
             </div>
         </div>
-        <!--left-area over-->
-        <div class="right-container">
-            <h1 class="logo-right">White</h1>
-            <div class="tp-right-inner-container">
-                <h1 class="tp-header">我的-个人资料</h1>
-                <div class="tp-content-top">
-                    <div class="tp-content-top-left">
-                        <div class="tp-content-top-title">
-                            <ul>
-                                <li>
-                                    <i class="iconfont icon-ziyuan">姓名</i>
-                                    <span class="value">马腾</span>
-                                </li>
-                                <li>
-                                    <i class="iconfont icon-dianhua">电话</i>
-                                    <span class="value">17390604287</span>
-                                </li>
-                                <li>
-                                    <i class="iconfont icon-shengri">生日</i>
-                                    <span class="value">1998.01</span>
-                                </li>
-                                <li>
-                                    <i class="iconfont icon-dizhi">地址</i>
-                                    <span class="value">黑龙江大学A2</span>
-                                </li>
-                                <li>
-                                    <i class="iconfont icon-tubiao209">邮箱</i>
-                                    <span class="value">370627276@qq.com</span>
-                                </li>
-                            </ul>
-                            <div class="tp-content-top-img"></div>
-                        </div>
-                        <p style="margin-bottom: 20px">
-                            黑龙江大学数据科学与技术学院网络工程专业2015级学生
-                            <br> 有扎实的计算机基础，以及敏感的互联网思维，较强的学习能力，较好的管理能力，熟悉网络编程流程，对基本的办公事宜有所了解
-                            <br>
-                        </p>
-                        <p style="margin-bottom: 20px">
-                            本人个性阳光，积极向上，有责任感，在担任班长的三年里与班里同学相处的非常好， 有着优秀的管理能力，老师交给的任务也能完美及时完成。本人动手能力极强，善于拆卸 安装各种型号的电脑 ，笔记本等，掌握各种系统的安装与操作。
-                        </p>
+    </div>
+</header>
+<!-- header-end -->
+<!-- mycontent -->
+<div id="services" class="text-center">
+    <div class="container">
+        <div class="section-title center">
+            <h2>基本
+                <strong>资料</strong>
+            </h2>
+            <hr>
+        </div>
+        <div class="space"></div>
+        <div class="row">
+            <div class="col-md-4 col-sm-6 services">
+                <i class="fa fa-laptop"></i>
+                <h4>
+                    <strong>个人信息</strong>
+                </h4>
+                <p>姓名：马腾
+                    <br> 性别：男
+                    <br> 年龄：20
+                </p>
+            </div>
+            <div class="col-md-4 col-sm-6 services">
+                <i class="fa fa-code"></i>
+                <h4>
+                    <strong>教育背景</strong>
+                </h4>
+                <p>专业：网络工程
+                    <br> 学校：黑龙江大学
+                    <br> 学历：本科
+                </p>
+            </div>
+            <div class="col-md-4 col-sm-6 services">
+                <i class="fa fa-bullseye"></i>
+                <h4>
+                    <strong>联系方式</strong>
+                </h4>
+                <p>电话：17390604287
+                    <br> 邮箱：370627276@qq.com
+                    <br> 微信：ycmt0123
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- mycontent-end -->
+<!-- myskill -->
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-offset-1 cod-md-6">
+                <h3 class="progressbar-title">HTML</h3>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 85% ; background:#23a784;">
+                        <span>85%</span>
+                        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
                     </div>
-                    <div class="tp-content-top-right">
-                        <div class="top-img">
-                            <div class="top-myimg"></div>
-                        </div>
-
+                </div>
+                <h3 class="progressbar-title">CSS</h3>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 85%; background:#3185c6">
+                        <span>85%</span>
+                        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <h3 class="progressbar-title">javascript</h3>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 80%; background:#d9534f">
+                        <span>80%</span>
+                        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <h3 class="progressbar-title">jquery</h3>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 80%; background:#f0ad4e;">
+                        <span>80%</span>
+                        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <h3 class="progressbar-title">Vue</h3>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 85%;background:#c2197c">
+                        <span>85%</span>
+                        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="mycontent">
-            <div class="top-info">
-                <h3 class="top-info-name">马腾</h3>
-                <p class="top-info-work">前端工程师</p>
-                <p class="top-info-dizhi">
-                    <i class="iconfont icon-dizhi"></i>哈尔滨</p>
-            </div>
-            <div class="top-desc">
-                <p>
-                    1.掌握HTML/CSS能够编写语义化的HTML,模块化的CSS，能独立完成较复杂的布局
-                    <br> 2.掌握原生JavaScript
-                    <br> 3.熟悉并使用Vue/JQuery
-                    <br> 4.熟悉响应式开发
-                    <br> 5.拥有团队合作项目经验
-                    <br>
-                </p>
-            </div>
-            <div class="top-foot">
-                <h6>©2018-2019 马腾 | lovehtml</h6>
-                <a href="http://www.miitbeian.gov.cn/" target="_blank">
-                    <h6>黑ICP备18001844号</h6>
-                </a>
-                <h6 id="mytime"></h6>
+    </div>
+</div>
+<!-- myskill-end -->
+<!-- project-exp -->
+<div id="project">
+    <div class="container header">
+
+        <!-- <div class="col-md-6 oof"><h1>项目经验</h1></div> -->
+        <div class="col-sm-6">
+            <h1>简历
+            </h1>
+        </div>
+        <div class="w1000 tc ">
+            <div class="event_wrap clearfix">
+                <div class="middle_line">
+                </div>
             </div>
         </div>
     </div>
+</div>
+<!-- project-exp-end -->
+<script type="text/javascript" src="js/jquery.1.11.1.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/jquery.eventFlow.js"></script>
+<script>
+    $(function () {
+        var bigEvent = [{
+            'year': 2017,
+            'events': [
+                {
+                    'mouths': 3,
+                    'times': '2017年3月24日',
+                    'even': '在Web课所接触到前端后开始自学前端，随后仿写了小米官网的静态伪站，后面逐渐完善Js部分'
+                }, {
+                    'mouths': 5,
+                    'times': '2017年5月8日',
+                    'even': '在掌握了一定的前端知识后运用PS制作出了PSD图片，并且通过HTML+CSS+JQuery实现图片的内容'
+                }, {
+                    'mouths': 7,
+                    'times': '2017年7月11日',
+                    'even': '在学习了require后，封装了轮播图，弹层。后续运用CSS3写了旋转合并的照片墙'
+                },
+                {
+                    'mouths': 10,
+                    'times': '2017年10月15日',
+                    'even': '在学习了响应式后，运用html编写主体内容、div+css布局、利用viewport仿写了星巴克的官网'
+                },
+                {
+                    'mouths': 12,
+                    'times': '2018年12月18日',
+                    'even': '在学习了vue后，用vuecli编写了一个有读取猫眼电影的数据，音乐播放器，图书，图片的APP'
+                },]
+        }, {
+            'year': 2018,
+            'events': [
+                {
+                    'mouths': 2,
+                    'times': '2018年2月15日',
+                    'even': '在学习了后端语言PHP后，用PHPCI+MYSQL写了一个我的博客（通过PHP去修改HTML页面）'
+                },
+                {
+                    'mouths': 4,
+                    'times': '2018年4月20日',
+                    'even': '2018年4月20日--至今，在中粮信托无央科技公司实习开发小程序项目--针对农民的粮食买卖的小程序'
+                }
+            ]
+        }];
+        $('.event_wrap').eventFlow({ 'events': bigEvent });
+    })
+
+</script>
 </body>
 
 </html>
